added server.js file with all the the configurations

--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/yotalha/apollo-express/issues"
   },
-  "homepage": "https://github.com/yotalha/apollo-express#readme"
+  "homepage": "https://github.com/yotalha/apollo-express#readme",
+  "dependencies": {
+    "apollo-server-express": "^3.4.0",
+    "express": "^4.17.1"
+  }
 }
